--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Quicksand:wght@300&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
+
 body {
-    font-family: Arial;
+    font-family: 'Oswald, sans-serif';
+    font-weight: 400;
 }
