--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Quicksand:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Quicksand&display=swap');
 
 * {
     margin: 0;
@@ -8,6 +8,21 @@
 
 
 body {
-    font-family: 'Oswald, sans-serif';
+    font-family: 'Quicksand', sans-serif;
     font-weight: 400;
+    color: #10420E;
+}
+
+/* headings and logo */
+
+h1, h2 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: capitalize;
+    letter-spacing: 6px;
+    color: #024500;
+}
+
+#logo {
+    float: left;
+    font-size: 325%;
 }
