--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,5 +24,35 @@ h1, h2 {
 
 #logo {
     float: left;
-    font-size: 325%;
+    font-size: 320%;
+}
+
+/* navigations links */
+
+#menu {
+    font-size: 120%;
+    letter-spacing: 6px;
+}
+
+#menu, #logo {
+    line-height: 80px;
+}
+
+#menu li {
+    float: right;
+    list-style-type: none;
+    margin-right: 25px;
+}
+
+#menu a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#menu a:hover {
+    border-bottom: 1.8px solid #10420E;
+}
+
+.active {
+    border-bottom: 1.8px solid #10420E;
 }
