--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,8 +24,12 @@ h1, h2 {
 
 #logo {
     float: left;
-    font-size: 320%;
-}
+    margin-left: 30px;
+    position: relative;
+    left: -30px;
+    top: -5px;
+}  
+
 
 /* navigations links */
 
@@ -35,8 +39,10 @@ h1, h2 {
 }
 
 #menu, #logo {
-    line-height: 80px;
+    line-height: 120px;
 }
+    
+
 
 #menu li {
     float: right;
@@ -55,4 +61,16 @@ h1, h2 {
 
 .active {
     border-bottom: 1.8px solid #10420E;
+}
+
+/* hero image */
+
+#hero-image {
+    height: 700px;
+    width: 100%;
+    background: url(../images/people-nature.png) no-repeat center center;
+    overflow: hidden;
+    position: relative;
+    top: -40px;
+    
 }
