--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 body {
     font-family: 'Quicksand', sans-serif;
     font-weight: 400;
-    color: #10420E;
+    color: #569117;
 }
 
 /* headings and logo */
@@ -22,12 +22,12 @@ h1, h2 {
     color: #024500;
 }
 
+
 #logo {
     float: left;
     margin-left: 30px;
     position: relative;
-    left: -30px;
-    top: -5px;
+    left: -45px;
 }  
 
 
@@ -35,7 +35,8 @@ h1, h2 {
 
 #menu {
     font-size: 120%;
-    letter-spacing: 6px;
+    letter-spacing: 4px;
+    text-transform: uppercase;
 }
 
 #menu, #logo {
@@ -65,6 +66,10 @@ h1, h2 {
 
 /* hero image */
 
+#cover-text, #cover-text h3 {
+    color: #fff;
+}
+
 #hero-image {
     height: 700px;
     width: 100%;
@@ -72,5 +77,23 @@ h1, h2 {
     overflow: hidden;
     position: relative;
     top: -40px;
-    
+}
+
+#cover-text {
+    font-size: 100%;
+    font-family: 'Quicksand', sans-serif;
+    letter-spacing: 4px;
+
+    width: 600px;
+    height: 200px;
+
+    padding-top: 30px;
+    padding-left: 20px;
+
+    background-color: rgba(9, 105, 46, 0.7);
+
+    bottom: 80px;
+    right: 240px;
+
+    position: absolute;
 }
