--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,10 +15,10 @@ body {
 
 /* headings and logo */
 
-h1, h2 {
+h2 {
     font-family: 'Oswald', sans-serif;
     text-transform: capitalize;
-    letter-spacing: 6px;
+    letter-spacing: 4px;
     color: #024500;
 }
 
@@ -40,8 +40,6 @@ h1, h2 {
     line-height: 120px;
 }
     
-
-
 #menu li {
     float: right;
     list-style-type: none;
@@ -101,39 +99,54 @@ h1, h2 {
     height: 700px;
 }
 
-#bio h2{
-    width: 38%;
+#left-bio, #right-bio {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+.meet {
     text-align: center;
-    line-height: 60px;
-    letter-spacing: 4px;
+    margin: 20px 0;
+    font-size: 280%;
     text-transform: uppercase;
-    padding: 2em 2em 3em 25em;
-}
-
-#left-bio {
-    padding-top: 30;
-    width: 33%;
-    float: left;
-}
-
-#right-bio{
-    padding-top: 30;
-    width: 33%;
-    float: right;
 }
 
 hr {
     border: 1px solid #569117;
     width: 25%;
     margin: 0 auto;
-    position: relative;
-    bottom: 60px;
 }
 
-.left-bio-text {
-    width: 90%;
+#left-bio {
+    padding-top: 150px;
+    padding-right: 10em;
+    width: 40%;
     float: right;
-    line-height: 25px;
-    clear: both;
-    margin-bottom: 50px;
+}
+
+#right-bio{
+    padding-top: 100px;
+    padding-right: 250px;
+    height: 100%;
+    width: 25%;
+    float: right;
+}
+
+
+
+.left-bio-text {
+    line-height: 30px;
+    letter-spacing: 4px;
+    padding-right: 100px;
+    width: 120%;
+    text-align: left;
+
+}
+
+.alexandra {
+    background: no repeat center center;
+    height: 50%;
+    border-radius: 50%;
 }
