--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,8 +17,7 @@ body {
 
 h2 {
     font-family: 'Oswald', sans-serif;
-    text-transform: capitalize;
-    letter-spacing: 4px;
+    letter-spacing: 5px;
     color: #024500;
 }
 
@@ -32,7 +31,7 @@ h2 {
 
 #menu {
     font-size: 120%;
-    letter-spacing: 4px;
+    letter-spacing: 5px;
     text-transform: uppercase;
 }
 
@@ -77,7 +76,7 @@ h2 {
 #cover-text {
     font-size: 100%;
     font-family: 'Quicksand', sans-serif;
-    letter-spacing: 4px;
+    letter-spacing: 5px;
 
     width: 600px;
     height: 200px;
@@ -138,7 +137,7 @@ hr {
 
 .left-bio-text {
     line-height: 30px;
-    letter-spacing: 4px;
+    letter-spacing: 5px;
     padding-right: 100px;
     width: 120%;
     text-align: left;
@@ -146,7 +145,8 @@ hr {
 }
 
 .alexandra {
-    background: no repeat center center;
     height: 50%;
     border-radius: 50%;
 }
+
+/* meet-up */
