--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,22 +170,27 @@ hr {
 
 #meet-up-times h2 {
     color: white;
+    letter-spacing: 5px;
+}
+
+#meet-up-times h3 {
+    font-size: 110%;
 }
 
 #meet-up-reconnect {
     position: absolute;
-    top: 50%;
-    left: 320px;
+    top: 58%;
+    left: 330px;
     width: 200px;
     line-height: 20px;
     float: left;
-    line-height: 40px;
+    line-height: 30px;
     border-radius: 50%;
 }
 
 #meet-up-climate {
     position: absolute;
-    top: 50%;
+    top: 55%;
     right: 45%;
     width: 200px;
     line-height: 20px;
@@ -196,7 +201,7 @@ hr {
 
 #meet-up-forest {
     position: absolute;
-    top: 53%;
+    top: 58%;
     right: 320px;
     width: 200px;
     line-height: 20px;
@@ -208,54 +213,45 @@ hr {
 /* footer */
 
 footer {
-    margin-top: 100px;
-    font-size: 20px;
-    color: #024500;
-    letter-spacing: 5px;
-    text-transform: uppercase;
-    font-family: 'Oswald', sans-serif;
+    padding: 150px 0 15px 0;
 }
 
 footer h4 {
-    font-size: 30px;
+    font-size: 20px;
     color: #024500;
-    padding-bottom: 15px;
-    padding-top: 30px;
+    text-transform: uppercase;
+    padding-bottom: 30px;
 }
 
 footer p {
-    font-size: 20px;
-    margin-bottom: 0;
+    font-size: 15px;
     line-height: 40px;
 }
 
-.row {
+.footer-container {
+    max-width: 1300px;
+    margin: auto;
+    padding: 0 20px;
     display: flex;
-    flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px;
+    justify-content: space-between;
     text-align: center;
-}
-
-.contact {
-    position: relative;
-    padding-top: 150px;
-    padding-right: 100px;
-    width: 100%;
+    flex-wrap: wrap-reverse;
+    letter-spacing: 5px;
 }
 
 .social-links {
-    position: relative;
-    padding-right: 100px;
-    width: 100%;
-}
-.social-links > li {
-    display: inline;
-    list-style: none;
+    margin: 20px 0;
 }
 
-.social-links i {
-    margin: 2%;
-    color: #024500;
-    font-size: 180%;
+.social-links a {
+    color: #569117;
+    margin: 8%;
+    font-size: 25px;
+    text-decoration: none;
+    transition: .3s linear;
 }
+
+.social-links a:hover {
+    color: #024500;
+}
+
