--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ h2 {
 /* bio */
 
 #bio {
-    height: 700px;
+    height: 500px;
 }
 
 #left-bio, #right-bio {
@@ -145,9 +145,58 @@ hr {
 }
 
 .alexandra {
-    height: 50%;
     border-radius: 50%;
+    height: 80%;
 }
+
+/* testimonials */
+
+
+.heading {
+    text-align: center;
+    color: #024500;
+    font-size: 30px;
+    font-weight: 700;
+    position: relative;
+    margin-bottom: 70px;
+    text-transform: uppercase;
+    z-index: 999;
+}
+
+
+.container {
+    border-radius: 50px;
+    padding: 50px;
+    margin: 50px 0;
+}
+
+.container::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+
+.container img {
+    margin-right: 20px;
+    border-radius: 50%;
+    width: 15%;
+    margin: auto;
+    float: none;
+    display: block;
+ }
+
+.container p {
+    letter-spacing: 5px;
+    line-height: 30px;
+    width: 40%;
+    display: block;
+    margin: auto;
+    float: none;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
 
 /* meet-up */
 
@@ -201,7 +250,7 @@ hr {
 
 #meet-up-forest {
     position: absolute;
-    top: 58%;
+    top: 55%;
     right: 320px;
     width: 200px;
     line-height: 20px;
