--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&family=Quicksand&display=swap');
 
+
 * {
     margin: 0;
     padding: 0;
@@ -14,7 +15,9 @@ body {
     box-sizing: border-box;
 }
 
+
 /* headings and logo */
+
 
 h2 {
     font-family: 'Oswald', sans-serif;
@@ -30,40 +33,49 @@ h2 {
 
 /* navigations links */
 
+
 #menu {
     font-size: 120%;
     letter-spacing: 5px;
     text-transform: uppercase;
 }
 
+
 #menu, #logo {
     line-height: 120px;
 }
-    
+  
+
 #menu li {
     float: right;
     list-style-type: none;
     margin-right: 25px;
 }
 
+
 #menu a {
     text-decoration: none;
     color: inherit;
 }
 
+
 #menu a:hover {
     border-bottom: 1.8px solid #10420E;
 }
+
 
 .active {
     border-bottom: 1.8px solid #10420E;
 }
 
+
 /* hero image */
+
 
 #cover-text, #cover-text h3 {
     color: #fff;
 }
+
 
 #hero-image {
     height: 700px;
@@ -71,8 +83,9 @@ h2 {
     background: url(../images/hero-image.jpg) no-repeat center center;
     overflow: hidden;
     position: relative;
-    top: -40px;
+    top: -20px;
 }
+
 
 #cover-text {
     font-size: 100%;
@@ -93,11 +106,15 @@ h2 {
     position: absolute;
 }
 
+
 /* bio */
+
 
 #bio {
     height: 500px;
+    margin-top: 100px;
 }
+
 
 #left-bio, #right-bio {
     display: flex;
@@ -106,6 +123,7 @@ h2 {
     margin-left: -15px;
 }
 
+
 .meet {
     text-align: center;
     margin: 20px 0;
@@ -113,11 +131,13 @@ h2 {
     text-transform: uppercase;
 }
 
+
 hr {
     border: 1px solid #569117;
     width: 25%;
     margin: 0 auto;
 }
+
 
 #right-bio {
     padding-top: 150px;
@@ -126,6 +146,7 @@ hr {
     float: right;
 }
 
+
 #left-bio{
     padding-top: 100px;
     padding-right: 250px;
@@ -133,7 +154,6 @@ hr {
     width: 25%;
     float: right;
 }
-
 
 
 .right-bio-text {
@@ -145,12 +165,25 @@ hr {
 
 }
 
+
 .alexandra {
     border-radius: 50%;
     height: 80%;
+    transition: 1.5s ease-in-out;
 }
 
+
+#left-bio img:hover {
+   transform: scale(0.9);
+}
+
+
 /* testimonials */
+
+
+#testimonials {
+    margin-top: 100px;
+}
 
 
 .heading {
@@ -168,7 +201,7 @@ hr {
 .container {
     border-radius: 50px;
     padding: 50px;
-    margin: 50px 0;
+    margin: 30px 0;
 }
 
 .container::after {
@@ -185,6 +218,11 @@ hr {
     margin: auto;
     float: none;
     display: block;
+    transition: 1.5s ease-in-out;
+ }
+
+ .container img:hover {
+    transform: scale(1.1);
  }
 
 .container p {
@@ -208,6 +246,7 @@ hr {
     font-size: 100%;
 }
 
+
 #meet-up img {
     width: 300px;
     border-radius: 50%;
@@ -216,16 +255,25 @@ hr {
     margin-left: 200px;
     right: 100px;
     overflow: hidden;
+    transition: 1.5s ease-in-out;
 }
+
+
+#meet-up img:hover {
+    transform: scale(1.1);
+}
+
 
 #meet-up-times h2 {
     color: white;
     letter-spacing: 5px;
 }
 
+
 #meet-up-times h3 {
     font-size: 110%;
 }
+
 
 #meet-up-reconnect {
     position: absolute;
@@ -238,6 +286,7 @@ hr {
     border-radius: 50%;
 }
 
+
 #meet-up-climate {
     position: absolute;
     top: 55%;
@@ -248,6 +297,7 @@ hr {
     line-height: 40px;
     border-radius: 50%;
 }
+
 
 #meet-up-forest {
     position: absolute;
@@ -260,7 +310,9 @@ hr {
     border-radius: 50%;
 }
 
+
 /* about */
+
 
 .about-workshops {
     min-height: 100vh;
@@ -268,6 +320,7 @@ hr {
     align-items: center;
     justify-content: center;
 }
+
 
 .about img {
     float: left;
@@ -277,6 +330,7 @@ hr {
     margin-left: 170px;
 }
  
+
 .inner-container {
     width: 30%;
     position: relative;
@@ -311,7 +365,6 @@ hr {
 }
 
 
- 
 .skills { 
     display: flex;
     justify-content: space-between;
@@ -337,19 +390,79 @@ border-radius: 20px;
 transition: 0.5s;
 }
 
-
-.active-about {
-  background-image: linear-gradient(to right top, #BBDBBE, #DEEBDD);
-  color: #024500;
-  border-radius: 20px;
+#workshop {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 100px;
 }
+
+
+.bg-image {
+    overflow: hidden;
+    filter: blur(1.5px);
+    -webkit-filter: blur(1.5px);
+    width: 50%;
+    position: relative;
+    left: 150px;
+}
+
+.bg-image1 {
+    overflow: hidden;
+    filter: blur(1.5px);
+    -webkit-filter: blur(1.5px);
+    width: 50%;
+    position: relative;
+    left: 500px;
+}
+
+.wks-text {
+    background-color: rgb(0,0,0);
+    background-color: rgba(250, 250, 250, 0.6);
+    color: #569117;
+    font-weight: bold;
+    border: 3px solid #f1f1f1;
+    top: 50%;
+    right: 420px;
+    z-index: 2;
+    padding: 20px;
+    text-align: center;
+    position: relative;
+    width: 48%;
+}
+
+#workshop p {
+    color: #10420E;
+    letter-spacing: 5px;
+    line-height: 20px;
+    text-align: left;
+}
+
+#workshop h2 {
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    line-height: 150px;
+}
+
+
+#workshop h3 {
+    color: #024500;
+    letter-spacing: 5px;
+    font-family: 'Oswald', sans-serif;
+    line-height: 80px;
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
 
 
 /* footer */
 
+
 footer {
     padding: 150px 0 15px 0;
 }
+
 
 footer h4 {
     font-size: 20px;
@@ -358,10 +471,12 @@ footer h4 {
     padding-bottom: 30px;
 }
 
+
 footer p {
     font-size: 15px;
     line-height: 40px;
 }
+
 
 .footer-container {
     max-width: 1300px;
@@ -374,9 +489,11 @@ footer p {
     letter-spacing: 5px;
 }
 
+
 .social-links {
     margin: 20px 0;
 }
+
 
 .social-links a {
     color: #569117;
@@ -385,6 +502,7 @@ footer p {
     text-decoration: none;
     transition: .3s linear;
 }
+
 
 .social-links a:hover {
     color: #024500;
