--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,7 @@ h2 {
     float: right;
     list-style-type: none;
     margin-right: 25px;
+    margin-top: 60px;
 }
 
 
@@ -335,9 +336,9 @@ hr {
     width: 30%;
     position: relative;
     float: right;
-    padding: 140px;
-    right: 170px;
-    top: 130px;
+    padding: 130px;
+    right: 175px;
+    top: 110px;
     background-color: #fdfdfd;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
@@ -356,9 +357,9 @@ hr {
  
 
 .text {
-    font-size: 13px;
+    font-size: 100%;
     color: #569117;
-    line-height: 20px;
+    line-height: 17px;
     text-align: left;
     margin-bottom: 50px;
     letter-spacing: 5px;
@@ -380,7 +381,7 @@ hr {
 
 .about span {
   cursor: text;
-  font-size: 16px;
+  font-size: 17px;
   text-align: center;
   padding: 10px;
   width: 500px;
@@ -446,7 +447,7 @@ transition: 0.5s;
     margin-right: 180px;
     margin-top: 200px;
     position: relative;
-    right: 9px;
+    right: 8.5px;
 }
 
 
@@ -456,7 +457,7 @@ transition: 0.5s;
     height: 950px;
     position: relative;
     float: left;
-    padding: 70px 100px 60px 100px;
+    padding: 70px 100px 10px 100px;
     right: 100px;
     top: 50px;
     background-color: #fdfdfd;
@@ -489,21 +490,21 @@ transition: 0.5s;
 }
 
 #workshop1 p, li {
-    color: #10420E;
+    color: #569117;
     letter-spacing: 5px;
     line-height: 20px;
     text-align: left;
 }
 
 #workshop2 p, li {
-    color: #10420E;
+    color: #569117;
     letter-spacing: 5px;
     line-height: 20px;
     text-align: left;
 }
 
 #workshop3 p, li {
-    color: #10420E;
+    color: #569117;
     letter-spacing: 5px;
     line-height: 20px;
     text-align: left;
@@ -566,6 +567,85 @@ transition: 0.5s;
 }
 
 
+/* contact form */
+
+
+.form-section {
+    clear: left;
+    background: url("../images/tree-background.jpg") no-repeat center center;
+    background-size: cover;
+    height: 1500px;
+    font-family: 'Quicksand', sans-serif;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    font-size: 23px;
+}
+
+.contact-form {
+    margin: 0 auto;
+    color: #024500;
+    background-color: rgba(255, 255, 255, 0.6);
+    position: relative;
+    padding: 200px 100px 200px 100px;
+    top: 150px;
+    max-width: 40%;
+} 
+
+.contact-form h2 {
+    color: #024500;
+    margin-bottom: 60px;
+    font-size: 80px;
+    font-family: 'Oswald', sans-serif;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+}
+
+.text-input {
+    background: transparent;
+    color: #024500;
+    width: 100%;
+    height: 40px;
+    margin: 10px 0 20px 0;
+    border: 2px solid #569117;
+    border-radius: 5px;
+}
+
+.text-input:hover {
+    border-color: #024500;
+}
+
+#message {
+    height: 200px;    
+}
+
+input {
+    font-size: 20px;
+    font-family:'Quicksand', sans-serif;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+}
+
+textarea {
+    font-size: 20px;
+    font-family: 'Quicksand', sans-serif;
+    letter-spacing: 5px;
+}
+
+.join-button {
+    margin-top: 25px;
+    border-radius: 5px;
+    padding: 20px 32px 20px 32px;
+    text-align: center;
+    font-size: 100%;
+    background-color: #d78b19;
+    color: #fafafa;
+    display: block;
+}
+
+.join-button:hover {
+    background-color: #fafafa;
+    color: #ebb667;
+}
 
 /* footer */
 
