--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,10 @@ body {
     font-weight: 400;
     color: #569117;
     box-sizing: border-box;
+    max-width: 1800px;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 
 
@@ -77,13 +81,18 @@ h2 {
     color: #fff;
 }
 
+#hero-outer {
+    height: px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+}  
+
 
 #hero-image {
     height: 700px;
     width: 100%;
     background: url(../images/hero-image.jpg) no-repeat center center;
-    overflow: hidden;
-    position: relative;
     top: -20px;
 }
 
@@ -112,17 +121,9 @@ h2 {
 
 
 #bio {
-    height: 500px;
-    margin-top: 100px;
+    height: 700px;
 }
 
-
-#left-bio, #right-bio {
-    display: flex;
-    flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px;
-}
 
 
 .meet {
@@ -136,33 +137,28 @@ h2 {
 hr {
     border: 1px solid #569117;
     width: 25%;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
 }
+
+#bio-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row-reverse;
+    align-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 100px;
+}
+
 
 
 #right-bio {
-    padding-top: 150px;
-    padding-right: 10em;
     width: 40%;
-    float: right;
-}
-
-
-#left-bio{
-    padding-top: 100px;
-    padding-right: 250px;
-    height: 100%;
-    width: 25%;
-    float: right;
-}
-
-
-.right-bio-text {
-    line-height: 30px;
     letter-spacing: 5px;
-    padding-right: 100px;
-    width: 120%;
     text-align: left;
+    line-height: 30px;
 
 }
 
@@ -195,7 +191,6 @@ hr {
     position: relative;
     margin-bottom: 70px;
     text-transform: uppercase;
-    z-index: 999;
 }
 
 
@@ -247,14 +242,19 @@ hr {
     font-size: 100%;
 }
 
+#meet-up-img {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    align-content: space-between;
+    justify-content: space-around;
+    align-items: center;
+}
 
 #meet-up img {
-    width: 300px;
+    max-width: 300px;
     border-radius: 50%;
-    position: relative;
-    margin-top: 150px;
-    margin-left: 200px;
-    right: 100px;
+    margin-top: 70px;
     overflow: hidden;
     transition: 1.5s ease-in-out;
 }
@@ -266,8 +266,9 @@ hr {
 
 
 #meet-up-times h2 {
-    color: white;
-    letter-spacing: 5px;
+    color:white;
+    letter-spacing: 3px;
+
 }
 
 
@@ -275,40 +276,24 @@ hr {
     font-size: 110%;
 }
 
-
-#meet-up-reconnect {
-    position: absolute;
-    top: 58%;
-    left: 330px;
-    width: 200px;
-    line-height: 20px;
-    float: left;
-    line-height: 30px;
-    border-radius: 50%;
-}
-
-
-#meet-up-climate {
-    position: absolute;
-    top: 55%;
-    right: 45%;
-    width: 200px;
-    line-height: 20px;
-    float: left;
+#meet-up-text {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: space-around;
+    position: relative;
+    bottom: 250px;
     line-height: 40px;
-    border-radius: 50%;
+    right: 25px;
+    font-size: 95%;
+   
 }
-
 
 #meet-up-forest {
-    position: absolute;
-    top: 55%;
-    right: 320px;
-    width: 200px;
-    line-height: 20px;
-    float: left;
-    line-height: 40px;
-    border-radius: 50%;
+    position: relative;
+    right: -20px;
+ 
 }
 
 
@@ -316,10 +301,12 @@ hr {
 
 
 .about-workshops {
-    min-height: 100vh;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; 
+    position: relative;
+    top: 200px;
+    margin-bottom: 300px;
 }
 
 
@@ -401,7 +388,7 @@ transition: 0.5s;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 100px;
+    padding-bottom: 100px;
 }
 
 #workshop2 {
@@ -699,3 +686,5 @@ footer p {
     color: #024500;
 }
 
+
+/* media queries */
