--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Oswald&display=swap');
 
 
 * {
     margin: 0;
     padding: 0;
     border: none;
+    box-sizing: border-box;
 }
 
 
 body {
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     color: #569117;
     box-sizing: border-box;
@@ -23,6 +24,13 @@ body {
 /* headings and logo */
 
 
+#header {
+    display: flex;
+    flex-direction: column;
+
+}
+
+
 h2 {
     font-family: 'Oswald', sans-serif;
     letter-spacing: 5px;
@@ -32,28 +40,35 @@ h2 {
 
 #logo {
     float: left;
-}  
+    position: relative;
+    top: 15px;
+} 
+
+#logo img {
+    max-width: 300px;
+}
 
 
 /* navigations links */
 
+
+#menu, #logo {
+    margin-bottom: 10px;
+}
 
 #menu {
     font-size: 120%;
     letter-spacing: 5px;
     text-transform: uppercase;
 }
-
-
-#menu, #logo {
-    line-height: 120px;
-}
   
+
 
 #menu li {
     float: right;
     list-style-type: none;
     margin-right: 25px;
+    line-height: 100px;
 }
 
 
@@ -75,43 +90,38 @@ h2 {
 
 /* hero image */
 
+#hero-outer {
+    position: relative;
+}
+
+#hero-image {
+    height: 600px;
+    max-width: 100%;
+    background: url(../images/hero-image.jpg) no-repeat center center;
+    background-size: cover;
+}
+
 
 #cover-text, #cover-text h3 {
     color: #fff;
 }
 
-#hero-outer {
-    height: px;
-    width: 100%;
-    overflow: hidden;
-    position: relative;
-}  
-
-
-#hero-image {
-    height: 700px;
-    width: 100%;
-    background: url(../images/hero-image.jpg) no-repeat center center;
-    top: -20px;
-}
-
 
 #cover-text {
     font-size: 100%;
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     letter-spacing: 5px;
 
-    width: 600px;
-    height: 200px;
+    max-width: 600px;
 
     padding-top: 30px;
     padding-left: 20px;
 
     background-color: rgba(9, 105, 46, 0.7);
 
-    bottom: 80px;
-    right: 240px;
-
+    float: right;
+    margin-top: 300px;
+    right: 20px;
     position: absolute;
 }
 
@@ -120,7 +130,7 @@ h2 {
 
 
 #bio {
-    height: 700px;
+    min-height: 700px;
 }
 
 
@@ -154,7 +164,7 @@ hr {
 
 
 #right-bio {
-    width: 40%;
+    max-width: 40%;
     letter-spacing: 5px;
     text-align: left;
     line-height: 30px;
@@ -163,8 +173,8 @@ hr {
 
 
 .alexandra {
+    max-width: 100%;
     border-radius: 50%;
-    height: 80%;
     transition: 1.5s ease-in-out;
 }
 
@@ -209,7 +219,7 @@ hr {
 .container img {
     margin-right: 20px;
     border-radius: 50%;
-    width: 15%;
+    max-width: 40%;
     margin: auto;
     float: none;
     display: block;
@@ -223,7 +233,7 @@ hr {
 .container p {
     letter-spacing: 5px;
     line-height: 30px;
-    width: 40%;
+    max-width: 40%;
     display: block;
     margin: auto;
     float: none;
@@ -243,9 +253,6 @@ hr {
 
 #meet-up-img {
     display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    align-content: space-between;
     justify-content: space-around;
     align-items: center;
 }
@@ -277,9 +284,6 @@ hr {
 
 #meet-up-text {
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-content: center;
     justify-content: space-around;
     position: relative;
     bottom: 250px;
@@ -304,7 +308,7 @@ hr {
     align-items: center;
     justify-content: center; 
     width: 100%;
-    height: 770px;
+    min-height: 90vh;
 }
 
 
@@ -313,7 +317,7 @@ hr {
     overflow: hidden;
     height: auto;
     width: 50%;
-    margin-left: 100px;
+    margin-left: 5%;
 }
 
  
@@ -323,15 +327,15 @@ hr {
     position: relative;
     float: right;
     padding: 130px;
-    right: 80px;
-    top: 90px;
+    right: 8%;
+    top: 10%;
     background-color: #fdfdfd;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
 
 
 .inner-container h1 {
-    margin-bottom: 50px;
+    margin-bottom: 10%;
     font-size: 40px;
     font-weight: 900;
     color: #024500;
@@ -347,7 +351,7 @@ hr {
     color: #569117;
     line-height: 17px;
     text-align: left;
-    margin-bottom: 50px;
+    margin-bottom: 10%;
     letter-spacing: 5px;
 }
 
@@ -368,8 +372,8 @@ hr {
     font-size: 17px;
     text-align: center;
     padding: 10px;
-    background-color: #024500;
-    color: #BBDBBE;
+    background-image: linear-gradient(to right top, #BBDBBE, #DEEBDD);;
+    color: #024500;
     border-radius: 20px;
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
@@ -378,8 +382,8 @@ hr {
 
 
 .about-workshops button:hover {
-background-image: linear-gradient(to right top, #BBDBBE, #DEEBDD);
-color: #024500;
+background-image: linear-gradient(to right top, #024500, #022101);
+color: #BBDBBE;
 border-radius: 20px;
 transition: 0.5s;
 }
@@ -393,17 +397,16 @@ transition: 0.5s;
     align-content: center;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: auto;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    max-width: 100%;
+    min-height: 90vh;
+    margin-top: 10%;
+    margin-bottom: 10%;
 }
 
 
 .wks-image {
     overflow: hidden;
-    height: auto;
-    width: 100%;
+    max-width: 50%;
 }
 
 
@@ -411,9 +414,8 @@ transition: 0.5s;
     background-color: #fdfdfd;
     box-shadow: rgb(14 30 37 / 12%) 0px 2px 4px 0px, rgb(14 30 37 / 32%) 0px 2px 16px 0px;
     padding: 120px 100px 120px 100px;
-    width: 100%;
+    max-width: 50%;
     align-items: center;
-    height: auto;
 }
 
 
@@ -430,7 +432,7 @@ transition: 0.5s;
     text-transform: uppercase;
     font-size: 50px;
     bottom: 7em;
-    left: 23em;
+    left: 70%;
 
 }
 
@@ -440,7 +442,7 @@ transition: 0.5s;
     text-transform: uppercase;
     font-size: 50px;
     bottom: 21rem;
-    left: 10.5em;
+    left: 30%;
 }
 
 #workshop3 h2 {
@@ -448,7 +450,7 @@ transition: 0.5s;
     letter-spacing: 5px;
     text-transform: uppercase;
     font-size: 50px;
-    left: 23em;
+    left: 70%;
     bottom: 6.7em;
 }
 
@@ -470,8 +472,8 @@ transition: 0.5s;
     clear: left;
     background: url("../images/tree-background.jpg") no-repeat center center;
     background-size: cover;
-    height: 1500px;
-    font-family: 'Quicksand', sans-serif;
+    min-height: 1500px;
+    font-family: 'Montserrat', sans-serif;
     letter-spacing: 5px;
     text-transform: uppercase;
     font-size: 23px;
@@ -482,7 +484,7 @@ transition: 0.5s;
     color: #024500;
     background-color: rgba(255, 255, 255, 0.6);
     position: relative;
-    padding: 200px 100px 200px 100px;
+    padding: 200px 100px 70px 100px;
     top: 150px;
     max-width: 40%;
 } 
@@ -497,7 +499,7 @@ transition: 0.5s;
 }
 
 .text-input {
-    background: transparent;
+    background: white;
     color: #024500;
     width: 100%;
     height: 40px;
@@ -516,15 +518,17 @@ transition: 0.5s;
 
 input {
     font-size: 20px;
-    font-family:'Quicksand', sans-serif;
+    font-family:'Montserrat', sans-serif;
     letter-spacing: 5px;
     text-transform: uppercase;
+    padding: 15px;
 }
 
 textarea {
     font-size: 20px;
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     letter-spacing: 5px;
+    padding: 15px;
 }
 
 .join-button {
@@ -565,7 +569,7 @@ footer p {
 
 
 .footer-container {
-    max-width: 1300px;
+    max-width: 100%;
     margin: auto;
     padding: 0 20px;
     display: flex;
@@ -573,6 +577,15 @@ footer p {
     text-align: center;
     flex-wrap: wrap-reverse;
     letter-spacing: 5px;
+}
+
+.left-col {
+    max-width: 100%;
+    margin: 0 auto;
+}
+
+.right-col {
+    margin: 0 auto;
 }
 
 
@@ -596,3 +609,107 @@ footer p {
 
 
 /* media queries */
+
+@media screen and (max-width:900px) {
+
+     #meet-up-text {
+       font-size: 85%;
+       bottom: 230px;
+    }
+}
+
+@media screen and (max-width:720px) {
+      #logo {
+        position: static;
+    } 
+  
+      #menu li {
+        position: static;
+    }
+
+      #hero-image {
+        height: 600px;
+        background: url(../images/My\ project\ \(15\).jpg) no-repeat center center;
+        background-size: cover;
+    }
+    
+      hr {
+        width: 50%;
+    }
+
+      #right-bio {
+        max-width: 100%;
+        letter-spacing: 5px;
+        text-align: left;
+        line-height: 30px;
+        margin-bottom: 30px;
+    }
+
+      .container p {
+        letter-spacing: 5px;
+        line-height: 30px;
+        max-width: 100%;
+        display: block;
+        margin: auto;
+        float: none;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+
+
+     #meet-up-times {
+        margin-bottom: -300px;
+        font-size: inherit;
+    }
+
+     #meet-up-img {
+        flex-direction: column;
+    }
+
+     #meet-up-text {
+        flex-direction: column;
+        right: 0px;
+    }
+
+     #meet-up-reconnect {
+        position: relative;
+        bottom: 45rem;
+    }
+
+     #meet-up-climate {
+        position: relative;
+        bottom: 30rem;
+    }
+
+     #meet-up-forest {
+        position: relative;
+        bottom: 16rem;
+        right: 0px;
+    }
+}
+
+
+@media screen and (max-width:445px) {
+
+    #menu li {
+        font-size: 70%;
+        margin-right: 7px;
+
+    }
+
+    #hero-image {
+        height: 540px;
+    }
+
+
+    #cover-text {
+        margin-top: 235px;
+        font-size: 11px;
+        letter-spacing: 2px;
+        max-width: 100%
+    }
+
+    hr {
+        width: 50%;
+    }
+}
