Fixed sizes on meet up section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
 body {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
-    color: #569117;
+    color: #3e6712;
     box-sizing: border-box;
     max-width: 1800px;
     margin-left: auto;
@@ -45,7 +45,8 @@ h2 {
 } 
 
 #logo img {
-    max-width: 300px;
+    width: 300px;
+    height: 130px;
 }
 
 
@@ -145,7 +146,7 @@ h2 {
 
 
 hr {
-    border: 1px solid #569117;
+    border: 1px solid #3e6712;
     width: 25%;
     margin-left: auto;
     margin-right: auto;
@@ -174,7 +175,8 @@ hr {
 
 
 .alexandra {
-    max-width: 100%;
+    width: 100%;
+    height: 50%;
     border-radius: 50%;
     transition: 1.5s ease-in-out;
 }
@@ -220,11 +222,12 @@ hr {
 .container img {
     margin-right: 20px;
     border-radius: 50%;
-    max-width: 40%;
+    width: 300px;
     margin: auto;
     float: none;
     display: block;
     transition: 1.5s ease-in-out;
+    height: 50%;
  }
 
  .container img:hover {
@@ -259,11 +262,12 @@ hr {
 }
 
 #meet-up img {
-    max-width: 300px;
+    width: 300px;
     border-radius: 50%;
     margin-top: 70px;
     overflow: hidden;
     transition: 1.5s ease-in-out;
+    height: 50%;
 }
 
 
@@ -287,9 +291,8 @@ hr {
     display: flex;
     justify-content: space-around;
     position: relative;
-    bottom: 250px;
+    bottom: 230px;
     line-height: 40px;
-    right: 25px;
     font-size: 95%;
    
 }
@@ -349,7 +352,7 @@ hr {
 
 .text {
     font-size: 100%;
-    color: #569117;
+    color: #3e6712;
     line-height: 17px;
     text-align: left;
     margin-bottom: 10%;
@@ -363,10 +366,6 @@ hr {
    
 }
 
-.skills a {
-    text-decoration: none;
-    color: inherit;
-}
 
 #about-workshops button {
     cursor: text;
@@ -402,7 +401,7 @@ transition: 0.5s;
 }
 
 
-#wks-image {
+.wks-image {
     background-image: url(../images/the-work-that-reconnects.jpg);
     height: 100%;
     background-position: right;
@@ -422,7 +421,7 @@ transition: 0.5s;
     box-shadow: rgb(14 30 37 / 12%) 0px 2px 4px 0px, rgb(14 30 37 / 32%) 0px 2px 16px 0px;
 }
 
-#wks-image2 {
+.wks-image2 {
     background-image: url(../images/climate-circles.JPG);
     height: 100%;
     background-position: left;
@@ -443,7 +442,7 @@ transition: 0.5s;
 
 
 .description {
-    color: #569117;
+    color: #3e6712;
     letter-spacing: 5px;
     line-height: 20px;
     text-align: left;
@@ -602,7 +601,7 @@ footer p {
 
 
 .social-links a {
-    color: #569117;
+    color: #3e6712;
     margin: 8%;
     font-size: 25px;
     text-decoration: none;
@@ -655,7 +654,7 @@ footer p {
       width: 100%;
     }
 
-    #wks-image, #wks-image2 {
+    .wks-image, .wks-image2 {
         background-size: 100%;
         padding: 100px 40px;
     }
@@ -679,7 +678,8 @@ footer p {
 
      #meet-up-text {
        font-size: 85%;
-       bottom: 230px;
+       bottom: 200px;
+       line-height: 30px;
     }
 
     .contact-form {
@@ -740,6 +740,8 @@ footer p {
      #meet-up-text {
         flex-direction: column;
         right: 0px;
+        bottom: 290px;
+        line-height: 40px;
     }
 
      #meet-up-reconnect {
@@ -794,7 +796,7 @@ footer p {
         margin: 80px 0px;
     }
 
-    #wks-image, #wks-image2 {
+    .wks-image, .wks-image2 {
         padding: 20px;
     }
 
