--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ h2 {
 } 
 
 #logo img {
-    width: 300px;
+    width: 360px;
     height: 130px;
 }
 
@@ -61,6 +61,7 @@ h2 {
     font-size: 120%;
     letter-spacing: 5px;
     text-transform: uppercase;
+
 }
   
 
@@ -99,7 +100,7 @@ h2 {
 #hero-image {
     height: 600px;
     max-width: 100%;
-    background: url(../images/hero-image.jpg) no-repeat center center;
+    background: url(../images/hero-image.webp) no-repeat center center;
     background-size: cover;
 }
 
@@ -222,7 +223,7 @@ hr {
 .container img {
     margin-right: 20px;
     border-radius: 50%;
-    width: 300px;
+    max-width: 40%;
     margin: auto;
     float: none;
     display: block;
@@ -266,7 +267,7 @@ hr {
     border-radius: 50%;
     margin-top: 70px;
     overflow: hidden;
-    transition: 1.5s ease-in-out;
+    transition: 1s ease-in-out;
     height: 50%;
 }
 
@@ -316,7 +317,7 @@ hr {
 
 
 #background-image {
-    background-image: url(../images/hands.jpg);
+    background-image: url(../images/hands.webp);
     height: 100%;
     background-position: left;
     background-repeat: no-repeat;
@@ -401,8 +402,8 @@ transition: 0.5s;
 }
 
 
-.wks-image {
-    background-image: url(../images/the-work-that-reconnects.jpg);
+.wks-image1 {
+    background-image: url(../images/the-work-that-reconnects.webp);
     height: 100%;
     background-position: right;
     background-repeat: no-repeat;
@@ -422,7 +423,7 @@ transition: 0.5s;
 }
 
 .wks-image2 {
-    background-image: url(../images/climate-circles.JPG);
+    background-image: url(../images/climate-circles.webp);
     height: 100%;
     background-position: left;
     background-repeat: no-repeat;
@@ -431,6 +432,20 @@ transition: 0.5s;
     padding: 100px 0;
     overflow: hidden;
 }
+
+
+.wks-image3 {
+    background-image: url(../images/hands-tree.webp);
+    height: 100%;
+    background-position: right;
+    background-repeat: no-repeat;
+    background-size: 55%;
+    position: relative;
+    padding: 100px 0;
+    overflow: hidden;
+}
+
+
 
 .wks-container2 {
     width: 55%;
@@ -472,7 +487,7 @@ transition: 0.5s;
 
 
 .form-section {
-    background: url("../images/tree-background.jpg") no-repeat center center;
+    background: url("../images/tree-background.webp") no-repeat center center;
     background-size: cover;
     min-height: 1500px;
     font-family: 'Montserrat', sans-serif;
@@ -654,7 +669,7 @@ footer p {
       width: 100%;
     }
 
-    .wks-image, .wks-image2 {
+    .wks-image1, .wks-image2, .wks-image3 {
         background-size: 100%;
         padding: 100px 40px;
     }
@@ -698,7 +713,7 @@ footer p {
 
       #hero-image {
         height: 600px;
-        background: url(../images/My\ project\ \(15\).jpg) no-repeat center center;
+        background: url(../images/hero-image2.webp) no-repeat center center;
         background-size: cover;
         margin-top: 20px;
     }
@@ -796,7 +811,7 @@ footer p {
         margin: 80px 0px;
     }
 
-    .wks-image, .wks-image2 {
+    .wks-image1, .wks-image2, .wks-image3 {
         padding: 20px;
     }
 
@@ -852,7 +867,7 @@ footer p {
 
    
 
-    #wks-image, #wks-image2 {
+    .wks-image1, .wks-image2, .wks-image3 {
         padding: 30px 20px;
     }
 
