--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -505,7 +505,7 @@ transition: 0.5s;
 .form-section {
     background: url("../images/tree-background.webp") no-repeat center center;
     background-size: cover;
-    min-height: 1500px;
+    height: 1500px;
     font-family: 'Montserrat', sans-serif;
     letter-spacing: 5px;
     text-transform: uppercase;
@@ -915,7 +915,4 @@ footer p {
     .contact-form {
         padding: 50px 25px 17.5px 25px;
     }
-    
-    
-
 }
