Changed the font size of buttons from about page for smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -894,6 +894,10 @@ footer p {
         width: 50%;
     }
 
+    #about-workshops button {
+        font-size: 14px;
+    }
+
     #inner-container {
         padding: 10px;
     }
